Update docs for release